force-app/main/default/objects/Contact/fields/American_Indian_Alaskan_Native__c.field-meta.xml
<CustomField>
    <fullName>American_Indian_Alaskan_Native__c</fullName>
    <defaultValue>false</defaultValue>
    <label>American Indian/ Alaskan Native</label>
    <type>Checkbox</type>
</CustomField>