force-app/main/default/objects/Contact/fields/BIAV_HH_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>BIAV_HH_Account_Status__c</fullName>
    <description>Not Reviewed -initial state, Reviewed - no conflicting evidence, Soft Confirmation - Used evidence to consolidate, Confirmed  - real world validation</description>
    <inlineHelpText>Not Reviewed -initial state, Reviewed - no conflicting evidence, Soft Confirmation - Used evidence to consolidate, Confirmed  - real world validation</inlineHelpText>
    <label>HH Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Reviewed</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Soft Confirmation</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
                <default>true</default>
                <label>Confirmed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>