force-app/main/default/objects/Contact/fields/Black__c.field-meta.xml
<CustomField>
    <fullName>Black__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Black</label>
    <type>Checkbox</type>
</CustomField>