force-app/main/default/objects/Contact/fields/Brain_Injury_diagnosed__c.field-meta.xml
<CustomField>
    <fullName>Brain_Injury_diagnosed__c</fullName>
    <label>Brain Injury diagnosed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not Discussed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>