force-app/main/default/objects/Contact/fields/Cause_of_Injury__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Injury__c</fullName>
    <label>Cause of Injury</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traumatic</fullName>
            </value>
            <value>
                <fullName>Non-Traumatic Brain Injury</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>