force-app/main/default/objects/Contact/fields/Cause_of_Second_Injury__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Second_Injury__c</fullName>
    <label>Cause of Second Injury</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Traumatic</fullName>
            </value>
            <value>
                <fullName>Non-Traumatic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>