force-app/main/default/objects/Contact/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>This is the county where the contact resides</description>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accomack</fullName>
            </value>
            <value>
                <fullName>Albemarle</fullName>
            </value>
            <value>
                <fullName>Alexandria City</fullName>
            </value>
            <value>
                <fullName>Alleghany</fullName>
            </value>
            <value>
                <fullName>Amelia</fullName>
            </value>
            <value>
                <fullName>Amherst</fullName>
            </value>
            <value>
                <fullName>Appomattox</fullName>
            </value>
            <value>
                <fullName>Arlington</fullName>
            </value>
            <value>
                <fullName>Augusta</fullName>
            </value>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>Bedford</fullName>
            </value>
            <value>
                <fullName>Bedford City</fullName>
            </value>
            <value>
                <fullName>Bland</fullName>
            </value>
            <value>
                <fullName>Botetourt</fullName>
            </value>
            <value>
                <fullName>Bristol City</fullName>
            </value>
            <value>
                <fullName>Brunswick</fullName>
            </value>
            <value>
                <fullName>Buchanan</fullName>
            </value>
            <value>
                <fullName>Buckingham</fullName>
            </value>
            <value>
                <fullName>Buena Vista City</fullName>
            </value>
            <value>
                <fullName>Campbell</fullName>
            </value>
            <value>
                <fullName>Caroline</fullName>
            </value>
            <value>
                <fullName>Carroll</fullName>
            </value>
            <value>
                <fullName>Charles City</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Charlottesville City</fullName>
            </value>
            <value>
                <fullName>Chesapeake City</fullName>
            </value>
            <value>
                <fullName>Chesterfield</fullName>
            </value>
            <value>
                <fullName>Clarke</fullName>
            </value>
            <value>
                <fullName>Clifton Forge</fullName>
            </value>
            <value>
                <fullName>Colonial Heights City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>