force-app/main/default/objects/Contact/fields/Date_of_second_injury__c.field-meta.xml
<CustomField>
    <fullName>Date_of_second_injury__c</fullName>
    <label>Date of second injury</label>
    <type>Date</type>
</CustomField>