force-app/main/default/objects/Contact/fields/Describe_Housing_Situation__c.field-meta.xml
<CustomField>
    <fullName>Describe_Housing_Situation__c</fullName>
    <label>Describe Housing Situation</label>
    <type>TextArea</type>
</CustomField>