force-app/main/default/objects/Contact/fields/Describe_Support_System__c.field-meta.xml
<CustomField>
    <fullName>Describe_Support_System__c</fullName>
    <description>Describe who helps the pwbi and with what (include current services too)</description>
    <label>Describe Support System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>