force-app/main/default/objects/Contact/fields/Finance_Info__c.field-meta.xml
<CustomField>
    <fullName>Finance_Info__c</fullName>
    <label>Finance Info</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full-Time Employment</fullName>
            </value>
            <value>
                <fullName>Part-Time Employment</fullName>
            </value>
            <value>
                <fullName>SSDI</fullName>
            </value>
            <value>
                <fullName>SSI</fullName>
            </value>
            <value>
                <fullName>Social Security Retirement</fullName>
            </value>
            <value>
                <fullName>Worker&apos;s Comp</fullName>
            </value>
            <value>
                <fullName>Short Term Disability</fullName>
            </value>
            <value>
                <fullName>Long Term Disability</fullName>
            </value>
            <value>
                <fullName>Military Pension</fullName>
            </value>
            <value>
                <fullName>Private Pension</fullName>
            </value>
            <value>
                <fullName>No Income</fullName>
            </value>
            <value>
                <fullName>Decreased Family Income</fullName>
            </value>
            <value>
                <fullName>Not Discussed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>