force-app/main/default/objects/Contact/fields/FIPS_Code__c.field-meta.xml
<CustomField>
    <fullName>FIPS_Code__c</fullName>
    <label>FIPS Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>000 (Not Completed)</fullName>
            </value>
            <value>
                <fullName>000 (Unknown)</fullName>
            </value>
            <value>
                <fullName>001 (Accomack)</fullName>
            </value>
            <value>
                <fullName>003 (Albemarle)</fullName>
            </value>
            <value>
                <fullName>005 (Alleghany)</fullName>
            </value>
            <value>
                <fullName>007 (Amelia)</fullName>
            </value>
            <value>
                <fullName>009 (Amherst)</fullName>
            </value>
            <value>
                <fullName>011 (Appomattox)</fullName>
            </value>
            <value>
                <fullName>013 (Arlington)</fullName>
            </value>
            <value>
                <fullName>015 (Augusta)</fullName>
            </value>
            <value>
                <fullName>017 (Bath)</fullName>
            </value>
            <value>
                <fullName>019 (Bedford)</fullName>
            </value>
            <value>
                <fullName>021 (Bland)</fullName>
            </value>
            <value>
                <fullName>023 (Botecourt)</fullName>
            </value>
            <value>
                <fullName>025 (Brunswick)</fullName>
            </value>
            <value>
                <fullName>027 (Buchanan)</fullName>
            </value>
            <value>
                <fullName>029 (Buckingham)</fullName>
            </value>
            <value>
                <fullName>031 (Campbell)</fullName>
            </value>
            <value>
                <fullName>033 (Caroline)</fullName>
            </value>
            <value>
                <fullName>035 (Carroll)</fullName>
            </value>
            <value>
                <fullName>036 (Charles City)</fullName>
            </value>
            <value>
                <fullName>037 (Charlotte)</fullName>
            </value>
            <value>
                <fullName>041 (Chesterfield)</fullName>
            </value>
            <value>
                <fullName>043 (Clarke)</fullName>
            </value>
            <value>
                <fullName>045 (Craig)</fullName>
            </value>
            <value>
                <fullName>047 (Culpeper)</fullName>
            </value>
            <value>
                <fullName>049 (Cumberland)</fullName>
            </value>
            <value>
                <fullName>051 (Dickenson)</fullName>
            </value>
            <value>
                <fullName>053 (Dinwiddie)</fullName>
            </value>
            <value>
                <fullName>057 (Essex)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>