force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Skills__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Skills__c</fullName>
    <inlineHelpText>Select the skill(s) this contact has that should be used to find volunteer jobs.</inlineHelpText>
    <label>Volunteer Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Computer usage</fullName>
            </value>
            <value>
                <fullName>Manual labor</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Event Planning</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Int - Administrative</fullName>
            </value>
            <value>
                <fullName>Int - Camp</fullName>
            </value>
            <value>
                <fullName>Int - Event</fullName>
            </value>
            <value>
                <fullName>Int - Advisory Board</fullName>
            </value>
            <value>
                <fullName>Int - Speakers Bureau</fullName>
            </value>
            <value>
                <fullName>Int - Advocacy</fullName>
            </value>
            <value>
                <fullName>Int - Research</fullName>
            </value>
            <value>
                <fullName>Int-Other</fullName>
                <label>Int - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>