force-app/main/default/objects/Contact/fields/Have_you_received_consultation_re_BI__c.field-meta.xml
<CustomField>
    <fullName>Have_you_received_consultation_re_BI__c</fullName>
    <label>Have you received consultation re: BI?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not Discussed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>