force-app/main/default/objects/Contact/fields/Housing_Information__c.field-meta.xml
<CustomField>
    <fullName>Housing_Information__c</fullName>
    <label>Housing Situation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not discussed</fullName>
            </value>
            <value>
                <fullName>Assisted Living</fullName>
            </value>
            <value>
                <fullName>Correctional Facility</fullName>
            </value>
            <value>
                <fullName>Foster Care</fullName>
            </value>
            <value>
                <fullName>Group Home</fullName>
            </value>
            <value>
                <fullName>Home/ Apartment</fullName>
            </value>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>ICF/MR</fullName>
            </value>
            <value>
                <fullName>Nursing Facility</fullName>
            </value>
            <value>
                <fullName>Other Congregate Living</fullName>
            </value>
            <value>
                <fullName>Psychiatric Hospital</fullName>
            </value>
            <value>
                <fullName>Rehab Facility</fullName>
            </value>
            <value>
                <fullName>Substance Abuse Residential Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>