force-app/main/default/objects/Contact/fields/How_did_you_hear_about_BIAV__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_BIAV__c</fullName>
    <inlineHelpText>Use this field to further describe the referred by option chosen below. ( for example, a specific program name, a professional name, for CSB&apos;s either substance abuse, mental health or developmental disability)</inlineHelpText>
    <label>How did you hear about BIAV</label>
    <length>250</length>
    <type>Text</type>
</CustomField>