force-app/main/default/objects/Contact/fields/If_other_describe__c.field-meta.xml
<CustomField>
    <fullName>If_other_describe__c</fullName>
    <label>Contact Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>