force-app/main/default/objects/Contact/fields/injury_description__c.field-meta.xml
<CustomField>
    <fullName>injury_description__c</fullName>
    <label>Injury description/history</label>
    <type>TextArea</type>
</CustomField>