force-app/main/default/objects/Contact/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Tricare</fullName>
            </value>
            <value>
                <fullName>Private Health Insurance</fullName>
            </value>
            <value>
                <fullName>No Insurance</fullName>
            </value>
            <value>
                <fullName>Pending Insurance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Discussed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>