force-app/main/default/objects/Contact/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Case Manager</fullName>
            </value>
            <value>
                <fullName>Correctional professional</fullName>
            </value>
            <value>
                <fullName>Educator</fullName>
            </value>
            <value>
                <fullName>Government official</fullName>
            </value>
            <value>
                <fullName>Legislator</fullName>
            </value>
            <value>
                <fullName>Mental Health Professional</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Program Staff</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Substance use counselor</fullName>
            </value>
            <value>
                <fullName>Therapist</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Vocational Counselor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>