force-app/main/default/objects/Contact/fields/Legislative_Advocate__c.field-meta.xml
<CustomField>
    <fullName>Legislative_Advocate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if this individual has been identified as a legislative advocate who is interested in providing General Assembly testimony, and/or working with their local representatives. Describe interests in text box above.</inlineHelpText>
    <label>Legislative Advocate</label>
    <type>Checkbox</type>
</CustomField>