force-app/main/default/objects/Contact/fields/Mechanism_of_Second_Injury__c.field-meta.xml
<CustomField>
    <fullName>Mechanism_of_Second_Injury__c</fullName>
    <label>Mechanism of Second Injury</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cause_of_Second_Injury__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>All-Terrain Vehicle</fullName>
            </value>
            <value>
                <fullName>Anoxia</fullName>
            </value>
            <value>
                <fullName>Assault</fullName>
            </value>
            <value>
                <fullName>AVM/ Aneurysm</fullName>
            </value>
            <value>
                <fullName>Bicycle</fullName>
            </value>
            <value>
                <fullName>Blast Injury</fullName>
            </value>
            <value>
                <fullName>Blow to Head</fullName>
            </value>
            <value>
                <fullName>CVA</fullName>
            </value>
            <value>
                <fullName>Electrocution/ Electric Shock</fullName>
            </value>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Gun Shot Wound</fullName>
            </value>
            <value>
                <fullName>Pedestrian</fullName>
            </value>
            <value>
                <fullName>Medical/ Disease</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle Accident</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Shaken Baby Syndrome</fullName>
            </value>
            <value>
                <fullName>Sports/ Recreation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>