force-app/main/default/objects/Contact/fields/Military_Active_Duty__c.field-meta.xml
<CustomField>
    <fullName>Military_Active_Duty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check for current active duty members</description>
    <inlineHelpText>Check for current active duty members</inlineHelpText>
    <label>Military Active Duty</label>
    <type>Checkbox</type>
</CustomField>