force-app/main/default/objects/Contact/fields/Native_Hawaiian_or_other_Pacific_Islande__c.field-meta.xml
<CustomField>
    <fullName>Native_Hawaiian_or_other_Pacific_Islande__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Native Hawaiian or other Pacific Islande</label>
    <type>Checkbox</type>
</CustomField>