force-app/main/default/objects/Contact/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <inlineHelpText>If you need to further explain a selection in this drop down, please do so in the text field above (How did you hear about biav)</inlineHelpText>
    <label>Referred By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acute Hospital</fullName>
            </value>
            <value>
                <fullName>BIAV Brochure</fullName>
            </value>
            <value>
                <fullName>BIAV Presentation</fullName>
            </value>
            <value>
                <fullName>Brain Injury Association</fullName>
            </value>
            <value>
                <fullName>CBS/SA</fullName>
            </value>
            <value>
                <fullName>CIL</fullName>
            </value>
            <value>
                <fullName>CSB</fullName>
            </value>
            <value>
                <fullName>CSB/MH</fullName>
            </value>
            <value>
                <fullName>DARS</fullName>
            </value>
            <value>
                <fullName>Detention Facility</fullName>
            </value>
            <value>
                <fullName>dLCV</fullName>
            </value>
            <value>
                <fullName>DMAS</fullName>
            </value>
            <value>
                <fullName>Domestic Violence</fullName>
            </value>
            <value>
                <fullName>DSS</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Home Health</fullName>
            </value>
            <value>
                <fullName>Human Service Directory</fullName>
            </value>
            <value>
                <fullName>Inpatient Rehab</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Long Term Facility</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Other BIA</fullName>
            </value>
            <value>
                <fullName>Outpatient Rehab</fullName>
            </value>
            <value>
                <fullName>Private Insurance</fullName>
            </value>
            <value>
                <fullName>Private Practitioner</fullName>
            </value>
            <value>
                <fullName>Probation Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>